added tests added configurations for spring